--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "vite": "^3.0.9"
   },
   "dependencies": {
+    "@forevolve/bootstrap-dark": "^3.0.0",
     "axios": "^1.2.0",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "ol": "latest",
     "pug": "^3.0.2"
